--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -23,7 +23,7 @@ household.modal.registration.title=Informatie over de inschrijving
 # WELCOME
 welcome.button.login=Aanmelding
 welcome.login_message=Ik heb reeds een Citizens' Reserve account
-welcome.title=Welkom op Citizens' Reserve!
+welcome.title=Welkom op Citizens' Reserve\!
 welcome.choose_message=Ik schrijf me in als
 welcome.forgot_password=Paswoord vergeten?
 welcome.forgot_password.desc=Geef uw e-mail adres op en ontvang een nieuw paswoord.
@@ -59,7 +59,7 @@ account.login.success=U bent verbonden
 # WELCOME
 welcome.title2=1/4 Wie ben ik?
 welcome.intro=Ik schrijf me in als
-welcome.outro=Dank voor uw deelname aan Citizens' Reserve!
+welcome.outro=Dank voor uw deelname aan Citizens' Reserve\!
 # PROFILE
 profile.title=2/4 Mijn verbruiksprofiel
 profile.intro=Geef aub uw elektrisch verbruik op voor <b>WEEKDAGEN (MAANDAG - VRIJDAG)</b>
@@ -69,16 +69,16 @@ profile.outro_2=In de volgende stap berekenen we uw afschakelreserve
 #ACTIONS
 actions.title=3/4 Mijn afschakelreserve
 enterprise.actions.title=2/3 Mijn afschakelreserve
-actions.intro=Op basis van uw verbruiksprofiel hebben we de meest aangewezen acties opgelijst om uw vermogen te verminderen tijdens dagen met risico op stroomtekort. Deze zijn opgenomen in de 5 rubrieken hieronder.<br/>Maak uw keuzes!
-actions.result=Mooi, uw acties zouden toelaten om <large><b>{0} watt</b></large> toe te voegen aan onze afschakelreserve!
+actions.intro=Op basis van uw verbruiksprofiel hebben we de meest aangewezen acties opgelijst om uw vermogen te verminderen tijdens dagen met risico op stroomtekort. Deze zijn opgenomen in de 5 rubrieken hieronder.<br/>Maak uw keuzes\!
+actions.result=Mooi, uw acties zouden toelaten om <large><b>{0} watt</b></large> toe te voegen aan onze afschakelreserve\!
 actions.outro=Om deze definitief vast te leggen, gelieve u aub in te schrijven in de volgende stap
 #REGISTER
 register.title=4/4 Ik word energie-reservist
 enterprise.register.title=1/3 Ik word energie-reservist
-register.intro=Om uw deelname aan Citizens' Reserve te bevestigen, hebben we een aantal gegevens nodig. Deze gegevens zijn nodig om:<br><ul><li>U in te lichten over een aankomend risico op stroomafschakeling en u te vragen om uw afschakelreserve in te zetten.<li>Te bevestigen dat u zal deelnemen aan de actie (om onze voorspellingen bij te stellen).<li>Te vermijden dat acties dubbel worden doorgerekend.<li>Het afschakelprofiel over te maken aan de verschillende actoren (netwerkbeheerder, leveranciers) zodat de kW van onze afschakelreserve mede beschouwd worden als instrument om stroomafschakeling te vermijden.<li>Uw persoonlijke gegevens worden niet aan derden overgemaakt zonder uw voorafgaande toestemming. Enkel onze totaalwaarden worden overgemaakt aan de actoren van de elektriciteitsmarkt. </ul>
+register.intro=Om uw deelname aan Citizens' Reserve te bevestigen, hebben we een aantal gegevens nodig. Deze gegevens zijn nodig om\:<br><ul><li>U in te lichten over een aankomend risico op stroomafschakeling en u te vragen om uw afschakelreserve in te zetten.<li>Te bevestigen dat u zal deelnemen aan de actie (om onze voorspellingen bij te stellen).<li>Te vermijden dat acties dubbel worden doorgerekend.<li>Het afschakelprofiel over te maken aan de verschillende actoren (netwerkbeheerder, leveranciers) zodat de kW van onze afschakelreserve mede beschouwd worden als instrument om stroomafschakeling te vermijden.<li>Uw persoonlijke gegevens worden niet aan derden overgemaakt zonder uw voorafgaande toestemming. Enkel onze totaalwaarden worden overgemaakt aan de actoren van de elektriciteitsmarkt. </ul>
 register.outro=Dank, bij het bevestigen van uw deelname krijgt u een overzicht van uw afschakelprofiel. De gegevens zullen u eveneens worden overgemaakt per e-mail.
 #RESULTS
-results.title=Proficiat!
+results.title=Proficiat\!
 results.intro=U bent nu officieel energie-reservist nr <large><b>{0} </b></large>
 result.result=Uw acties hebben <large><b>{0} watt</b></large> toegevoegd aan onze afschakelreserve en deze bedraagt nu <large><b>{1} kW</b></large>.<br/>Hierbij uw afschakelprofiel tussen 17u en 20u.
 result.outro=Wij danken u hartelijk voor uw deelname en uw gegevens zijn u overgemaakt per e-mail.<br/>Op elk moment kan u zich opnieuw aanmelden op Citizens' Reserve met uw login en paswoord.
@@ -97,6 +97,16 @@ account.terms= \
     <p>Geen van de overgemaakte persoonsgegevens zal ter beschikking worden gesteld van derden. De gegevens zullen ook niet gebruikt worden voor commerciële doeleinden.</p>\
     <p>[1] Volgens de Wet van 8 december 1992 tot bescherming van de persoonlijke levenssfeer ten opzichte van de verwerking van persoonsgegevens, verstaat men onder «persoonsgegevens» iedere informatie betreffende een geïdentificeerde of identificeerbare natuurlijke persoon […]; als «identificeerbaar» wordt beschouwd een persoon die direct of indirect kan worden geïdentificeerd, met name aan de hand van een identificatienummer of van één of meer specifieke elementen die kenmerkend zijn voor zijn of haar fysieke, fysiologische, psychische, economische, culturele of sociale identiteit.</p>\
     <p>[2] Voor natuurlijke personen, door het aanmaken van een persoonlijke account op de site mits registratie van een e-mail adres en paswoord.</p>
+generic.zip=Postcode
+result.result.enterprise=Uw cumulatieve acties zijn goed voor <b>{0} kWh</b>.<br/> Uw acties hebben <large><b>{1} watt</b></large> toegevoegd aan onze afschakelreserve en deze bedraagt nu <large><b>{2} kW</b></large>.<br/>
+enterprise.since=vanaf
+enterprise.during=gedurende
+enterprise.email.since=vanaf
+enterprise.email.during=gedurende
+enterprise.actions.title.placeholder=Vrije veld
+enterprise.actions.begin.placeholder=uu\:mm
+enterprise.actions.duration.placeholder=uu\:mm
+enterprise.actions.addline=een lijn toevoegen
 
 
 
