--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -110,6 +110,7 @@ action.effective-consumption-reduction.label=Mijn acties in kWh per dag over de 
 account.personaldata.title=Informatie over de inschrijving
 account.powerprovider.label=Elektriciteitsleverancier
 account.powerconsumercategory.label=Uw jaarlijks elektrisch verbruik
+acccount.powerconsumercategory_enterprise.label=Uw jaarlijks elektrisch verbruik <b>in MWh</b>
 account.zip.label=Postcode
 powerconsumercategory.options.0.label=Minder dan 2500 kWh/jaar
 powerconsumercategory.options.1.label=Tussen 2501 en 3500 kWh/jaar
@@ -164,5 +165,34 @@ account.info.newEmail=Uw nieuwe e-mail adres
 account.kit.label=Ontvang de sensibiliseringskit
 account.info.currentPassword=Uw paswoord
 
+enterprise.office.label=Zone bureau
+enterprise.building.label=Techniques du bâtiment
+enterprise.process.label=Processus
+enterprise.other.label=Autres actions
+
+
 Q10110.label=PC
-Q10120.label=Servers
+Q10120.label=Serveurs
+
+Q10210.label=Chauffage électrique
+Q10220.label=Eclairage intérieur 
+Q10230.label=Eclairage extérieur
+Q10240.label=Enseignes lumineuses 
+Q10250.label=Ventilation 
+Q10260.label=Climatisation 
+Q10270.label=Ascenseurs 
+Q10280.label=Escalators 
+Q10290.label=(Champ libre)
+
+Q10310.label=Moteurs électriques (pompes, …)
+Q10320.label=Fours électriques
+Q10330.label=Froid positif 
+Q10340.label=Froid négatif 
+Q10350.label=Air comprimé 
+Q10360.label=Chargement des véhicules électriques 
+Q10380.label=Séchage 
+Q10390.label=Réacteurs chimiques 
+Q10395.label=(Champ libre)
+
+Q10400.label=(Champ libre)
+
