--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -71,6 +71,7 @@ profile.outro_2=Calculons à l'étape suivante votre capacité d'effacement
 actions.title=3/4 Mon potentiel d'effacement
 enterprise.actions.title=2/2 Mon potentiel d'effacement
 actions.intro=Sur base de votre profil, nous avons sélectionné les meilleures actions pour réduire votre puissance, réparties dans les 5 boites ci-dessous.<br/>Merci de faire vos choix !
+enterprise.actions.intro=Indiquez ci-dessous les actions que vous êtes prêt à réaliser lors des jours d'alerte, du lundi au vendredi, en particulier entre 17h et 20h. Pour chaque rubrique mentionnez la réduction de puissance électrique (kW) estimée <b>par rapport à la situation habituelle</b>.
 actions.result=Bravo, vos actions permettraient d'ajouter <large><b>{0} watts</b></large> dans la réserve d'effacement citoyenne !
 actions.outro=Pour les y enregistrer définitivement, merci de vous inscrire à l'étape suivante.
 #REGISTER
@@ -82,7 +83,7 @@ register.outro=Merci, vous aurez accès à un récapitulatif ainsi qu'à votre p
 results.title=FELICITATIONS !
 results.intro=Vous êtes officiellement notre <large><b>{0} ème</b></large> réserviste énergétique
 result.result=Vos actions ont ajouté <large><b>{0} watts</b></large> dans la réserve d'effacement citoyenne qui s'élève désormais à <large><b>{1} kW</b></large>.<br/>Voici votre profil d'effacement entre 17 et 20 h.
-result.result.enterprise=Vos actions cumulées s'élèvent à <b>{0} kWh</b>.<br/>Vos actions ont ajouté <large><b>{1} watts</b></large> dans la réserve d'effacement citoyenne (17h-20h) qui s'élève désormais à <large><b>{2} kW</b></large>.<br/>
+result.result.enterprise=En réalisant les actions que vous avez indiquées, vous réduirez votre consommation électrique de {0} kWh par jour d'alerte.<br/><br/>Pour la période à risque (17h-20h), vos engagements ont pour effet d'ajouter <large><b>{1} kW</large></b> dans la réserve d'effacement citoyenne, qui s'élève désormais à <large><b>{2} kW</b></large>.
 result.outro=Nous vous remercions chaleureusement de votre participation et vous envoyons vos informations par email.<br/>Vous pouvez à tout moment vous reconnecter sur Citizens' Reserve avec votre login et mot de passe.
 results.stack.name=Vous
 results.trend.name=Votre profil
