--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -98,7 +98,7 @@ account.terms= \
     <p>[1] Volgens de Wet van 8 december 1992 tot bescherming van de persoonlijke levenssfeer ten opzichte van de verwerking van persoonsgegevens, verstaat men onder «persoonsgegevens» iedere informatie betreffende een geïdentificeerde of identificeerbare natuurlijke persoon […]; als «identificeerbaar» wordt beschouwd een persoon die direct of indirect kan worden geïdentificeerd, met name aan de hand van een identificatienummer of van één of meer specifieke elementen die kenmerkend zijn voor zijn of haar fysieke, fysiologische, psychische, economische, culturele of sociale identiteit.</p>\
     <p>[2] Voor natuurlijke personen, door het aanmaken van een persoonlijke account op de site mits registratie van een e-mail adres en paswoord.</p>
 generic.zip=Postcode
-result.result.enterprise=Uw cumulatieve acties zijn goed voor <b>{0} kWh</b>.<br/> Uw acties hebben <large><b>{1} watt</b></large> toegevoegd aan onze afschakelreserve en deze bedraagt nu <large><b>{2} kW</b></large>.<br/>
+result.result.enterprise=Wanneer u de door u vermelde acties uitvoert, vermindert u uw elektrisch verbruik met {0} kWh per risicodag.<br/><br/>Uw inzet verhoogt de burgerlijke afschakelreserve met <large><b>{1} kW</large></b> voor de risicoperiode (17u-20u). Deze reserve bedraagt ondertussen <large><b>{2} kW</b></large>.
 enterprise.since=vanaf
 enterprise.during=gedurende
 enterprise.email.since=vanaf
@@ -107,6 +107,7 @@ enterprise.actions.title.placeholder=Vrije veld
 enterprise.actions.begin.placeholder=uu\:mm
 enterprise.actions.duration.placeholder=uu\:mm
 enterprise.actions.addline=een lijn toevoegen
+enterprise.actions.intro=Vermeld hieronder  de acties die u wilt ondernemen op risicodagen, van maandag tot vrijdag en meer bepaald tussen 17u en 20u. Geef voor elke rubriek aan hoeveel elektrisch vermogen (kW) u denkt uit te sparen <b>ten opzichte van de gebruikelijke situatie</b>.
 
 
 
