--- a/conf/translation/Email_nl.properties
+++ b/conf/translation/Email_nl.properties
@@ -1,4 +1,5 @@
-email.basic.footer_first=Aarzel niet om uw vrienden, collega's en buren ook te betrekken bij dit initiatief. U kan de informatie delen via sociale netwerken of een sensibiliseringskit aanvragen.
+#0 = sensitization kit URL
+email.basic.footer_first=Aarzel niet om uw vrienden, collega's en buren ook te betrekken bij dit initiatief. U kan de informatie delen via sociale netwerken of een <a href="{0}">sensibiliseringskit</a> aanvragen.
 email.basic.footer_second=We danken u,<br><br>Het team van Citizens' Reserve<br><br>
 email.forgotPassword.subject=Recupereer uw paswoord
 #0 = firstname, 1 = lastname, 2 = new password
