--- a/conf/translation/Messages_nl.properties
+++ b/conf/translation/Messages_nl.properties
@@ -12,8 +12,8 @@ email_fatal_error=Omwille van een onbekende reden kon een e-mail niet verstuurd 
 not_connected=U bent niet aangemeld
 wrong_right=U beschikt niet over de nodige rechten
 data_not_found=De gevraagde gegevens kunnen niet gevonden worden
-validation_size=NL_Le champs {0} doit faire entre {1} et {2} caractères
-validation_not_null=NL_Le champs {0} ne peut pas être null
-dto_verification_pattern_string_expected=NL_Un type string est attendu pour le patternValidation, mais le champs {0} est de type {1}
-validation_pattern=NL_La validation du champs {0} a échoué : pattern attendu : {1}
-fatal_error=NL_Une erreur fatale inconnue a provoqué une l'échec de la requête : {0}
+validation_size=Het veld {0} moet tussen {1} en {2} karakters bevatten
+validation_not_null=Het veld {0} mag niet leeg zijn
+dto_verification_pattern_string_expected=Het veld {0} vereist een "tekst" antwoord  en geen type {1}.
+validation_pattern=De validatie van het veld {0} mislukte : een antwoord van formaat {1} wordt vereist.
+fatal_error=Omwille van een ongekende fatale fout mislukte uw verzoek : {0}
