--- a/conf/translation/Messages_fr.properties
+++ b/conf/translation/Messages_fr.properties
@@ -16,4 +16,4 @@ validation_size=Le champs {0} doit faire entre {1} et {2} caractères
 validation_not_null=Le champs {0} ne peut pas être null
 dto_verification_pattern_string_expected=Un type string est attendu pour le patternValidation, mais le champs {0} est de type {1}
 validation_pattern=La validation du champs {0} a échoué : pattern attendu : {1}
-fatal_error=Une erreur fatale inconnue a provoqué une l'échec de la requête : {0}
+fatal_error=Une erreur fatale inconnue a provoqué une l'échec de la requête \: {0}
