--- a/conf/translation/Messages_nl.properties
+++ b/conf/translation/Messages_nl.properties
@@ -12,3 +12,8 @@ email_fatal_error=Omwille van een onbekende reden kon een e-mail niet verstuurd 
 not_connected=U bent niet aangemeld
 wrong_right=U beschikt niet over de nodige rechten
 data_not_found=De gevraagde gegevens kunnen niet gevonden worden
+validation_size=Het veld {0} moet tussen de {1} en {2} karakters zijn.
+validation_not_null=Het veld {0} mag niet leeg zijn
+dto_verification_pattern_string_expected=Een string type wordt verwacht voor de patterValidation, maar het veld {0} is type {1}
+validation_pattern=De bevestiging van het veld {0} is niet gelukt\: verwacht pattern \: {1}
+fatal_error=Een onbekende fatale fout is het falen van de query veroorzaakt\: {0}
