--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -166,3 +166,26 @@ account.info.currentPassword=Uw paswoord
 
 Q10110.label=PC
 Q10120.label=Servers
+enterprise.office.label=Kantoren
+enterprise.building.label=
+enterprise.process.label=Process
+enterprise.other.label=Andere acties
+Q10220.label=Binnenverlichting
+Q10210.label=Elektrische verwarming
+Q10230.label=Buitenverlichting
+Q10240.label=Lichtreclames
+Q10250.label=Ventilatie
+Q10260.label=Airconditioning
+Q10270.label=Liften
+Q10280.label=Roltrappen
+Q10290.label=(Vrij veld)
+Q10310.label=Elektromotoren (pompen, ...)
+Q10320.label=Elektrische ovens
+Q10330.label=Positieve koude
+Q10340.label=Negatieve koude
+Q10350.label=Perslucht
+Q10360.label=Elektrische auto opladen
+Q10380.label=Drogen
+Q10390.label=Chemische reactoren
+Q10395.label=(Vrij veld)
+Q10400.label=(Vrij veld)
