--- a/conf/translation/Email_fr.properties
+++ b/conf/translation/Email_fr.properties
@@ -1,4 +1,4 @@
-#0 = citizen reserve domain name
+#0 = citizen reserve home
 email.basic.footer_first=N'hésitez à parler de l'initiative autour de vous et encourager vos amis, collègues et voisins à participer à l'aide des <a href="{0}/wp-content/uploads/2015/01/Sensibilisation.pdf">kits de sensibilisation</a> et en partageant l'information sur les réseaux sociaux.
 email.basic.footer_second=En vous remerciant,<br/><br/>L'équipe de Citizens' Reserve<br/><br/>
 email.forgotPassword.subject=Récupération de votre mot de passe
