--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -158,6 +158,8 @@ account.errorMessage.password=Entre 5 et 18 caractères ou chiffres ou -_%
 account.errorMessage.repeatPassword=Les deux mots de passe sont différents
 account.errorMessage.zip=Entre 4 et 20 caractères
 account.errorMessage.terms=Vous devez accepter les termes et conditions pour vous enregistrer
+account.errorMessage.powerConsumption=Veuillez entrer un nombre
+
 account.info.term.button.consult=Consulter les termes et conditions
 account.terms.modal.title=Termes et conditions
 account.button.changePassword=Changer de mot de passe
