--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -157,6 +157,8 @@ account.errorMessage.password=tussen 5 en 18 lettertekens of cijfers of -_%
 account.errorMessage.repeatPassword=De twee paswoorden komen niet overeen
 account.errorMessage.zip=tussen 4 en 20 lettertekens
 account.errorMessage.terms=U dient de Algemene Voorwaarden te aanvaarden om u te kunnen registreren
+account.errorMessage.powerConsumption=Vul een getal
+
 account.info.term.button.consult=Raadpleeg de Algemene Voorwaarden
 account.terms.modal.title=Algemene Voorwaarden
 account.button.changePassword=Verander het paswoord
